infra/k8s/11-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-worker
  namespace: platform
  labels: { app: platform-worker, app.kubernetes.io/component: worker }
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate: { maxUnavailable: 0, maxSurge: 1 }
  selector:
    matchLabels: { app: platform-worker }
  template:
    metadata:
      labels: { app: platform-worker }
    spec:
      serviceAccountName: platform-worker
      containers:
        - name: worker
          image: REPLACE_ME_ECR/platform/worker:latest
          imagePullPolicy: Always
          resources:
            requests: { cpu: "100m", memory: "256Mi" }
            limits:   { cpu: "500m", memory: "512Mi" }
